<resources>
    <string name="app_name">JobSearchApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_your_personal_account">Вход в личный кабинет</string>
    <string name="job_search">Поиск работы</string>
    <string name="employees_search">Поиск сотрудников</string>
    <string name="email_or_phone">Электронная почта или телефон</string>
    <string name="log_in_continue">Продолжить</string>
    <string name="log_in_with_pass">Войти с поролем</string>
    <string name="posting_vacancies">Размещение вакансий и доступ к базе резюме</string>
    <string name="i_search_employees">Я ищу сотрудников</string>
    <string name="incorrect_email">Вы ввели неверный e-mail</string>
    <string name="cod_sended">Отправили код на</string>
    <string name="confirm_text">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="b_confirm">Подтвердить</string>
    <string name="search_hint">Должность, ключевые слова</string>
    <string name="jobs_for_you">Вакансии для вас</string>
    <string name="more">Ёще</string>
    <string name="respond">Откликнуться</string>
    <string name="filter_tv">По соответствию</string>
    <string name="tv_favorites">Избранное</string>
    <string name="count_favorites">1 вакансия</string>
    <string name="your_tasks">Ваши задачи</string>
    <string name="question_for_employer">Задайте вопрос работодателю</string>
    <string name="hi_will_receive">Он получит его с откликом на вакансию</string>
    <string name="summary_for_response">Резюме для отклика</string>
    <string name="tv_add_accomp">Добавить сопроводительное</string>
    <string name="your_accomp">Ваше сопроводительное письмо</string>
    <string name="salary_not_exist">Уровень дохода не указан</string>
    <string name="applied_number">человек уже откликнулось</string>
    <string name="looking_number">человека сейчас смотрят</string>
    <string name="looking_n">Сейчас просматривает</string>



    <plurals name="vacancies_count">
        <item quantity="one">вакансия</item>
        <item quantity="few">вакансии</item>
        <item quantity="many">вакансий</item>
    </plurals>

    <plurals name="person_count">
        <item quantity="one">%d человек</item>
        <item quantity="few">%d человека</item>
        <item quantity="many">%d человек</item>
    </plurals>

    <string-array name="months">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>

    <string name="search">Поиск</string>
    <string name="favorites">Избранное</string>
    <string name="responses">Отклики</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="home">Home</string>

</resources>