<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainScreen"
        android:icon="@drawable/search_false3x"
        android:title="@string/search" />
     <item
         android:id="@+id/nav_favorites"
         android:icon="@drawable/favorites_true3x"
         android:title="@string/favorites" />
      <item
          android:id="@+id/nav_responses"
          android:icon="@drawable/responses_false3x"
          android:title="@string/responses"/>
     <item
         android:id="@+id/nav_messages"
         android:icon="@drawable/messages_false3x"
         android:title="@string/messages"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile_false3x"
        android:title="@string/profile"/>
    <!---->
</menu>